# advent_of_code_2023_rust

./: Cargo.toml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs
src/util/: io.rs
test/: day1_test.rs
