[package]
name = "aoc_23"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc_23"
path = "src/main.rs"

[lib]
name = "aoc_23"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
